--- a/rayweb/_sass/abstracts/variables.scss
+++ b/rayweb/_sass/abstracts/variables.scss
@@ -21,3 +21,8 @@ $code-text-color: #567482 !default;
 $border-color: #dce6f0 !default;
 $table-border-color: #e9ebec !default;
 $hr-border-color: #eff0f1 !default;
+
+// Fonts
+$display-font-stack: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+$body-font-stack: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+$code-font-stack: Consolas, "Liberation Mono", Menlo, Courier, monospace;
