--- a/rayweb/_layouts/default.html
+++ b/rayweb/_layouts/default.html
@@ -5,8 +5,8 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#157878">
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700|Kanit:400,700,900|Jaldi:400,700' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="{{ '/css/style.css' | relative_url }}">
   </head>
   <body>
     <section class="page-header">
