--- a/rayweb/_sass/master.scss
+++ b/rayweb/_sass/master.scss
@@ -1,6 +1,17 @@
-@import "normalize";
-@import "rouge-github";
-@import "variables";
+// abstracts
+@import "abstracts/rouge-github";
+@import "abstracts/variables";
+
+// base
+@import "base/normalize";
+//@import "base/modularscale";
+//@import "base/typi/typi";
+@import "base/typography";
+
+// Components
+@import "components/image";
+
+// layout
 
 @mixin large {
   @media screen and (min-width: #{$large-breakpoint}) {
@@ -27,10 +38,11 @@
 body {
   padding: 0;
   margin: 0;
-  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: $body-font-stack;
   font-size: 16px;
   line-height: 1.5;
   color: $body-text-color;
+  object-fit: contain;
 }
 
 a {
@@ -164,9 +176,6 @@ a {
     font-size: 1rem;
   }
 
-  img {
-    max-width: 100%;
-  }
 
   h1,
   h2,
@@ -186,7 +195,7 @@ a {
 
   code {
     padding: 2px 4px;
-    font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
+    font-family: $code-font-stack;
     font-size: 0.9rem;
     color: $code-text-color;
     background-color: $code-bg-color;
@@ -197,7 +206,7 @@ a {
     padding: 0.8rem;
     margin-top: 0;
     margin-bottom: 1rem;
-    font: 1rem Consolas, "Liberation Mono", Menlo, Courier, monospace;
+    font: 1rem $code-font-stack;
     color: $code-text-color;
     word-wrap: normal;
     background-color: $code-bg-color;
