--- a/rayweb/_sass/base/typography.scss
+++ b/rayweb/_sass/base/typography.scss
@@ -16,3 +16,109 @@ html, body {
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
 }
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin-top: 2rem;
+  margin-bottom: 1rem;
+  font-weight: 900;
+  font-family: $display-font-stack;
+  color: $section-headings-color;
+}
+
+p {
+  margin-bottom: 1em;
+}
+
+code {
+  padding: 2px 4px;
+  font-family: $code-font-stack;
+  font-size: 0.9rem;
+  color: $code-text-color;
+  background-color: $code-bg-color;
+  border-radius: 0.3rem;
+}
+
+pre {
+  padding: 0.8rem;
+  margin-top: 0;
+  margin-bottom: 1rem;
+  font: 1rem $code-font-stack;
+  color: $code-text-color;
+  word-wrap: normal;
+  background-color: $code-bg-color;
+  border: solid 1px $border-color;
+  border-radius: 0.3rem;
+
+  > code {
+    padding: 0;
+    margin: 0;
+    font-size: 0.9rem;
+    color: $code-text-color;
+    word-break: normal;
+    white-space: pre;
+    background: transparent;
+    border: 0;
+  }
+}
+
+.highlight {
+  margin-bottom: 1rem;
+
+  pre {
+    margin-bottom: 0;
+    word-break: normal;
+  }
+}
+
+.highlight pre,
+pre {
+  padding: 0.8rem;
+  overflow: auto;
+  font-size: 0.9rem;
+  line-height: 1.45;
+  border-radius: 0.3rem;
+  -webkit-overflow-scrolling: touch;
+}
+
+pre code,
+pre tt {
+  display: inline;
+  max-width: initial;
+  padding: 0;
+  margin: 0;
+  overflow: initial;
+  line-height: inherit;
+  word-wrap: normal;
+  background-color: transparent;
+  border: 0;
+
+  &:before,
+  &:after {
+    content: normal;
+  }
+}
+
+ul,
+ol {
+  margin-top: 0;
+}
+
+blockquote {
+  padding: 0 1rem;
+  margin-left: 0;
+  color: $blockquote-text-color;
+  border-left: 0.3rem solid $border-color;
+
+  > :first-child {
+    margin-top: 0;
+  }
+
+  > :last-child {
+    margin-bottom: 0;
+  }
+}
