--- a/rayweb/_sass/abstracts/variables.scss
+++ b/rayweb/_sass/abstracts/variables.scss
@@ -1,6 +1,12 @@
 // Breakpoints
-$large-breakpoint: 64em !default;
-$medium-breakpoint: 42em !default;
+$breakpoints: ( 
+  s: 320px,
+  m: 600px,
+  l: 1200px,
+);
+
+//$large-breakpoint: 64em !default;
+//$medium-breakpoint: 42em !default;
 
 // Headers
 $header-heading-color: #333 !default;
