--- a/rayweb/_sass/base/typography.scss
+++ b/rayweb/_sass/base/typography.scss
@@ -1,3 +1,67 @@
+$typi-ms: (
+  null: 1.333,
+  s: 1.2,
+  m: 1.333,
+  l: 1.333
+);
+
+$typi: (
+  base: (
+    null: (16px, 1.5),
+    s: (15px),
+    m: (16px),
+    l: (18px)
+  ),
+  h1: (
+    null: (5, 1.25),
+    s: (5, 1.25),
+    m: (5, 1.25),
+    l: (5, 1.25)
+  ),
+  h2: (
+    null: (4, 1.25),
+    s: (4, 1.25),
+    m: (4, 1.25),
+    l: (4, 1.25)
+  ),
+  h3: (
+    null: (3, 1.25),
+    s: (3, 1.25),
+    m: (3, 1.25),
+    l: (3, 1.25)
+  ),
+  h4: (
+    null: (2, 1.25),
+    s: (2, 1.25),
+    m: (2, 1.25),
+    l: (2, 1.25)
+  ),
+  h5: (
+    null: (1, 1.25),
+    s: (1, 1.25),
+    m: (1, 1.25),
+    l: (1, 1.25)
+  ),
+  h6: (
+    null: 0,
+    s: 0,
+    m: 0,
+    l: 0
+  )
+);
+
+$typography-weight: (
+  h1: 300,
+  h2: 400,
+  h3: 400,
+  h4: 700,
+  h5: 700,
+  h6: 700
+);
+
+@include typi-init;
+
+
 html, body {
   -ms-word-break: break-all;
   word-break: break-all;
@@ -17,17 +81,16 @@ html, body {
   -ms-text-size-adjust: 100%;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  margin-top: 2rem;
-  margin-bottom: 1rem;
-  font-weight: 900;
-  font-family: $display-font-stack;
-  color: $section-headings-color;
+// Header Styling
+@for $i from 1 through 6 {
+  h#{$i} {
+    @include typi('h#{$i}');
+    font-weight: map-get($typography-weight , h#{$i} );
+    font-family: $display-font-stack;
+    margin-top: 2rem;
+    margin-bottom: 1rem;
+    color: $section-headings-color;
+  }
 }
 
 p {
