--- a/rayweb/_sass/base/typography.scss
+++ b/rayweb/_sass/base/typography.scss
@@ -79,6 +79,7 @@ html, body {
 
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
+  font-family: $body-font-stack;
 }
 
 // Header Styling
