--- a/rayweb/_sass/abstracts/variables.scss
+++ b/rayweb/_sass/abstracts/variables.scss
@@ -15,7 +15,7 @@ $header-bg-color-secondary: #155799 !default;
 
 // Text
 $section-headings-color: #333 !default;
-$body-text-color: #606c71 !default;
+$body-text-color: #333 !default;
 $body-link-color: #1e6bb8 !default;
 $blockquote-text-color: #819198 !default;
 $caption-text-color: #819198 !default;
