--- a/rayweb/_sass/abstracts/variables.scss
+++ b/rayweb/_sass/abstracts/variables.scss
@@ -30,6 +30,6 @@ $table-border-color: #e9ebec !default;
 $hr-border-color: #eff0f1 !default;
 
 // Fonts
-$display-font-stack: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
-$body-font-stack: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+$display-font-stack: "Playfair Display", "Helvetica Neue", Helvetica, Arial, sans-serif;
+$body-font-stack: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
 $code-font-stack: Consolas, "Liberation Mono", Menlo, Courier, monospace;
