--- a/rayweb/_includes/figure.html
+++ b/rayweb/_includes/figure.html
@@ -1,4 +1,4 @@
 <figure>
-  <img src="{{ include.image_asset }}" alt="{{ image_caption }}">
+  <img src="{{ include.image_asset }}" alt="{{ include.image_caption }}">
   <figcaption>{{ include.image_caption }}</figcaption>
 </figure>
