--- a/rayweb/_layouts/default.html
+++ b/rayweb/_layouts/default.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="{{ '/css/style.css' | relative_url }}">
   </head>
   <body>
+    
+    {% include header.html %}
+
     <section class="page-header">
       
     </section>
@@ -19,7 +22,12 @@
       <div class="project-body">
         <h1>{{ page.title }}</h1>
         <div class="project-description">{{ page.description }}</div>
-        <div class="project-info"><span>Role:</span>{{ page.role }}</div>
+        
+        <div class="quick-info">
+          <div class="project-info"><span class="info-title">Goal:</span>{{ page.goal }}</div>
+          <div class="project-info"><span class="info-title">Role:</span>{{ page.role }}</div>
+          <div class="project-info"><span class="info-title">Date:</span>{{ page.year }}</div>
+        </div> 
         
         {{ content }}
       </div>
