--- a/rayweb/_sass/base/typography.scss
+++ b/rayweb/_sass/base/typography.scss
@@ -1,28 +1,32 @@
 $typi-ms: (
   null: 1.333,
   s: 1.2,
-  m: 1.333,
-  l: 1.333
+  m: 1.25,
+  l: 1.333,
+  xl: 1.333
 );
 
 $typi: (
   base: (
-    null: (16px, 1.5),
+    null: (17px, 1.6),
     s: (15px),
-    m: (16px),
-    l: (18px)
+    m: (17px),
+    l: (18px),
+    xl: (19px)
   ),
   h1: (
     null: (5, 1.25),
     s: (5, 1.25),
     m: (5, 1.25),
-    l: (5, 1.25)
+    l: (5, 1.25),
+    xl: (5, 1.25)
   ),
   h2: (
     null: (4, 1.25),
     s: (4, 1.25),
     m: (4, 1.25),
-    l: (4, 1.25)
+    l: (4, 1.25),
+    xl: (4, 1.25)
   ),
   h3: (
     null: (3, 1.25),
@@ -34,25 +38,29 @@ $typi: (
     null: (2, 1.25),
     s: (2, 1.25),
     m: (2, 1.25),
-    l: (2, 1.25)
+    l: (2, 1.25),
+    xl: (2, 1.25),
   ),
   h5: (
     null: (1, 1.25),
     s: (1, 1.25),
     m: (1, 1.25),
-    l: (1, 1.25)
+    l: (1, 1.25),
+    xl: (1, 1.25)
   ),
   h6: (
     null: 0,
     s: 0,
     m: 0,
-    l: 0
+    l: 0,
+    xl: 0
   ),
   figcaption: (  // why isn't this working?
     null: -1,
     s: -1,
     m: -1,
-    l: -1
+    l: -1,
+    xl: -1
   )
 );
 
@@ -95,7 +103,7 @@ html, body {
     font-weight: map-get($typography-weight , h#{$i} );
     font-family: $display-font-stack;
     margin-top: 2rem;
-    margin-bottom: 0rem;
+    margin-bottom: 1rem;
     color: $section-headings-color;
   }
 }
@@ -105,7 +113,7 @@ figcaption{
 }
 
 p {
-  margin-bottom: 0em;
+  margin-bottom: 1rem;
 }
 
 code {
