--- a/rayweb/_sass/master.scss
+++ b/rayweb/_sass/master.scss
@@ -12,8 +12,10 @@
 // Components
 @import "components/image";
 @import "components/button";
+@import "components/project-info";
 
 // layout
+@import "layout/header";
 @import "layout/footer";
 @import "layout/work";
 
@@ -27,7 +29,8 @@ body {
   margin: 0;
 
   color: $body-text-color;
-  //object-fit: contain;
+ 
+  
 }
 
 a {
@@ -105,9 +108,9 @@ hr {
 figure{
 background-color: #f4f4f4;
 margin: 0;
-padding: 2em;
+padding: 2em 2em 1em 2em;
 
-margin-bottom: vr(2);
+margin-bottom: vr(1);
 
   figcaption {
     padding-top: 1em;
