--- a/rayweb/_layouts/home.html
+++ b/rayweb/_layouts/home.html
@@ -1,30 +1,43 @@
 ---
-layout: default
+layout: "main"
 ---
 
 <div class="home">
+  test
   {% if page.title %}
     <h1 class="page-heading">{{ page.title }}</h1>
   {% endif %}
 
   {{ content }}
 
-  {% if site.posts.size > 0 %}
-  <h2 class="post-list-heading">{{ page.list_title | default: "Posts" }}</h2>
+  {% if site.categories.work.size > 0 %}
+  <h2 class="post-list-heading">{{ page.list_title | default: "Selected Works" }}</h2>
     <ul class="post-list">
-      {% for post in site.posts %}
+      {% for post in site.categories.work %}
         <li>
-          {% assign date_format = site.minima.date_format | default: "%b %-d, %Y" %}
-          <span class="post-meta">{{ post.date | date: date_format }}</span>
-
           <h3>
             <a class="post-link" href="{{ post.url | relative_url }}">{{ post.title | escape }}</a>
           </h3>
+          <span class="post-meta">{{ post.year }}</span>
         </li>
       {% endfor %}
     </ul>
+{% endif %}   
 
-    <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></p>
+    {% if site.categories.explorations.size > 0 %}
+    <h2 class="post-list-heading">{{ page.list_title | default: "Explorations" }}</h2>
+      <ul class="post-list">
+        {% for post in site.categories.explorations %}
+          <li>
+            {% assign date_format = site.minima.date_format | default: "%b %-d, %Y" %}
+            <span class="post-meta">{{ post.date | date: date_format }}</span>
+  
+            <h3>
+              <a class="post-link" href="{{ post.url | relative_url }}">{{ post.title | escape }}</a>
+            </h3>
+          </li>
+        {% endfor %}
+      </ul>
   {% endif %}
 
 </div>
