--- a/rayweb/_layouts/main.html
+++ b/rayweb/_layouts/main.html
@@ -1,36 +1,16 @@
 <!DOCTYPE html>
 <html lang="{{ site.lang | default: "en-US" }}">
-  <head>
-    <meta charset="UTF-8">
 
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="theme-color" content="#157878">
-    <link href='https://fonts.googleapis.com/css?family=Lato:400,700|Playfair+Display:400,700,900' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="{{ '/css/style.css' | relative_url }}">
-  </head>
+{% include head.html %}
+
   <body>
     
     {% include header.html %}
 
-    <section class="page-header">
-      
-    </section>
 
     <section class="main-content">
       
-      
-      <div class="project-body">
-        <h1>{{ page.title }}</h1>
-        <div class="project-description">{{ page.description }}</div>
-        
-        <div class="quick-info">
-          <div class="project-info"><span class="info-title">Goal:</span>{{ page.goal }}</div>
-          <div class="project-info"><span class="info-title">Role:</span>{{ page.role }}</div>
-          <div class="project-info"><span class="info-title">Date:</span>{{ page.year }}</div>
-        </div> 
-        
-        {{ content }}
-      </div>
+      {{ content }}
 
       <footer class="site-footer">
         {% if site.github.is_project_page %}
