--- a/rayweb/_sass/abstracts/variables.scss
+++ b/rayweb/_sass/abstracts/variables.scss
@@ -20,6 +20,7 @@ $body-text-color: #333 !default;
 $body-link-color: #1e6bb8 !default;
 $blockquote-text-color: #819198 !default;
 $caption-text-color: #819198 !default;
+$muted-display-text-color: #9caeb4 !default;
 
 // Code
 $code-bg-color: #f3f6fa !default;
