--- a/rayweb/_sass/components/project-info.scss
+++ b/rayweb/_sass/components/project-info.scss
@@ -29,5 +29,6 @@
     font-weight: bold;
     font-family: $body-font-stack;
     font-style: italic;
+    color: $muted-display-text-color;
   }
 }
