--- a/rayweb/_sass/master.scss
+++ b/rayweb/_sass/master.scss
@@ -17,6 +17,8 @@
 // layout
 @import "layout/header";
 @import "layout/footer";
+@import "layout/home";
+@import "layout/main";
 @import "layout/work";
 
 
