--- a/rayweb/_sass/layout/home.scss
+++ b/rayweb/_sass/layout/home.scss
@@ -4,6 +4,10 @@
   .intro-title {
     font-size: ms(4);
     font-weight: 900;
+    margin-top: vr(5) !important;
+    @media all and (max-width: map-get($breakpoints, m )) {
+      font-size: ms(3);
+    }
   }
 
   .intro-text {
@@ -13,20 +17,22 @@
   .post-list-heading{
     font-family: $body-font-stack;
     font-weight: 900;
-    font-size: ms(0);
+    font-size: ms(-1);
     text-transform: uppercase;
-    margin-top: 5em;
+    margin-top: vr(4);
     color: $muted-display-text-color;
   }
 
   .post-list {
     padding: 0;
+    
 
     li {
       list-style: none;
       display: block;
       border-top: solid 1px #f2f2f2;
       padding: 1em 0;
+      padding-bottom: vr(2);
       
       &:last-child {
         border-bottom: solid 1px #f2f2f2;
