--- a/rayweb/_includes/header.html
+++ b/rayweb/_includes/header.html
@@ -1,6 +1,6 @@
 <nav>
     <ul>
-      <li class="logo"><a href="{{ site.baseurl }}{% link index.md %}">{% if page.url == "/" %}Ray Gonzales{% else %}&#8678; Go Back{% endif %}</a></li>
-      <li><a href="{{ site.baseurl }}{% link about.md %}">About</a></li>
+      <li class="logo"><a href="{{ site.baseurl }}{% link index.md %}">{% if page.url == "/" %}&nbsp;{% else %}&#8678; Go Back{% endif %}</a></li>
+      <!--<li><a href="{{ site.baseurl }}{% link about.md %}">About</a></li>-->
     </ul>
   </nav>
