--- a/rayweb/_sass/abstracts/variables.scss
+++ b/rayweb/_sass/abstracts/variables.scss
@@ -6,6 +6,9 @@ $breakpoints: (
   xl: 1200px
 );
 
+//colors
+$primary-color: #057aff;
+
 //$large-breakpoint: 64em !default;
 //$medium-breakpoint: 42em !default;
 
@@ -17,7 +20,7 @@ $header-bg-color-secondary: #155799 !default;
 // Text
 $section-headings-color: #333 !default;
 $body-text-color: #333 !default;
-$body-link-color: #1e6bb8 !default;
+$body-link-color: $primary-color !default;
 $blockquote-text-color: #819198 !default;
 $caption-text-color: #819198 !default;
 $muted-display-text-color: #9caeb4 !default;
