--- a/rayweb/_sass/layout/home.scss
+++ b/rayweb/_sass/layout/home.scss
@@ -4,7 +4,7 @@
   .intro-title {
     font-size: ms(4);
     font-weight: 900;
-    margin-top: vr(5) !important;
+    margin-top: vr(4) !important;
     @media all and (max-width: map-get($breakpoints, m )) {
       font-size: ms(3);
     }
@@ -40,6 +40,7 @@
 
       h3 {
         margin-bottom: 0;
+        margin-top: 0.5rem;
       }
     }    
   }
