--- a/rayweb/_sass/master.scss
+++ b/rayweb/_sass/master.scss
@@ -13,6 +13,7 @@
 @import "components/image";
 @import "components/button";
 @import "components/project-info";
+@import "components/related-posts";
 
 // layout
 @import "layout/header";
