finished most of the footer formating

--- a/rayweb/_includes/related_posts.html
+++ b/rayweb/_includes/related_posts.html
@@ -1,5 +1,5 @@
 <div class="related-posts">
-  <h2>Looking for more?</h2>
+  <h2>While you're here, check out my other work</h2>
   {% if page.previous.url %}
   <h3>
     <a class="prev" href="{{page.previous.url}}">{{page.previous.title}}</a>
@@ -7,7 +7,7 @@
   {% endif %}
   {% if page.next.url %}
   <h3>
-    <a class="next" href="{{page.next.url}}">{{page.next.title}} &raquo;</a>
+    <a class="next" href="{{page.next.url}}">{{page.next.title}}</a>
   </h3>
   {% endif %}
 </div>
