--- a/rayweb/_sass/abstracts/variables.scss
+++ b/rayweb/_sass/abstracts/variables.scss
@@ -7,7 +7,10 @@ $breakpoints: (
 );
 
 //colors
-$primary-color: #057aff;
+$primary-color: #384265; //#057aff; // 384265
+$secondary-color: #53799C;
+$highlight-color: #4c70f3;
+$muted-grey-color: #e4e3ed;
 
 //$large-breakpoint: 64em !default;
 //$medium-breakpoint: 42em !default;
@@ -17,12 +20,15 @@ $header-heading-color: #333 !default;
 $header-bg-color: #159957 !default;
 $header-bg-color-secondary: #155799 !default;
 
+// Footers
+$footer-bg-color: $muted-grey-color !default;
+
 // Text
-$section-headings-color: #333 !default;
-$body-text-color: #333 !default;
-$body-link-color: $primary-color !default;
-$blockquote-text-color: #819198 !default;
-$caption-text-color: #819198 !default;
+$section-headings-color: $primary-color !default;
+$body-text-color: $primary-color !default;
+$body-link-color: $highlight-color !default;
+$blockquote-text-color: $secondary-color !default;
+$caption-text-color: $secondary-color !default;
 $muted-display-text-color: #9caeb4 !default;
 
 // Code
@@ -33,6 +39,9 @@ $code-text-color: #567482 !default;
 $border-color: #dce6f0 !default;
 $table-border-color: #e9ebec !default;
 $hr-border-color: #eff0f1 !default;
+
+// Divider line styles
+//$1px-line: solid 1px $hr-border-color;
 
 // Fonts
 $display-font-stack: "Playfair Display", "Helvetica Neue", Helvetica, Arial, sans-serif;
