--- a/rayweb/_sass/components/related-posts.scss
+++ b/rayweb/_sass/components/related-posts.scss
@@ -1,16 +1,34 @@
 .related-posts {
   //font-size: 14px;
-  display: block;
-  width: auto;
-  overflow: hidden;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  //align-items: flex-start;
+  //width: auto;
+  //overflow: hidden;
+  border-bottom: solid 1px $hr-border-color;
+  padding-bottom: 2em;
+  margin-bottom: 2em;
 
+  h2, h3 {
+    margin: 0 !important;
+  }
+
+  h2 {
+    flex-basis: 40%;
+    font-size: ms(1);
+    align-self: center;
+    font-family: $body-font-stack;
+    opacity: 0.3;
+  }
+  
   a {
-  display: block;
-  border-top: solid 4px #333333;
-  width: 50%;
-  float: left;
-  margin: 1em 1em;
-  max-width: 22rem;
+  //flex-basis: 50%;
+  //border-top: solid 4px #333333;
+  //width: 50%;
+  //float: left;
+  //margin: 1em 1em;
+  //max-width: 22rem;
   }
 
   .next {
@@ -18,7 +36,10 @@
   }
 
   h3 {
+    flex-basis: 30%;
     font-size: ms(1);
     margin: vr(2) 0;
+    border-left: solid 1px $hr-border-color;
+    padding: 2rem;
   }
 }
