--- a/rayweb/_sass/layout/footer.scss
+++ b/rayweb/_sass/layout/footer.scss
@@ -1,7 +1,10 @@
 .site-footer {
   padding-top: 2rem;
   margin-top: 2rem;
-  border-top: solid 1px $hr-border-color;
+  background-color: $footer-bg-color;
+
+  //margin-left: calc(-100vw / 2 + 50em / 2);
+  //margin-right: calc(-100vw / 2 + 50em / 2);
 
   @include respond-to(l) {
     font-size: 1rem;
