--- a/rayweb/_layouts/home.html
+++ b/rayweb/_layouts/home.html
@@ -4,7 +4,7 @@ layout: "main"
 
 <div class="home">
   <h1 class="intro-title">Hi, I'm Ray!</h1>
-  <p class="intro-text">I am a designer. I enjoy crafting thoughtful and engaging experiences that help people achieve more. Here's a few things I've worked on. Let me know what you think!</p>
+  <p class="intro-text">I am a designer currently working at <a href="https://www.virtru.com">Virtru</a>. I enjoy crafting thoughtful and engaging experiences that help people achieve more. Here's a few things I've worked on. Let me know what you think! &#x270C;</p>
   {{ content }}
 
   {% if site.categories.work.size > 0 %}
