--- a/rayweb/_sass/abstracts/mixins.scss
+++ b/rayweb/_sass/abstracts/mixins.scss
@@ -28,3 +28,15 @@
    
   @warn "Unknown `#{$breakpoint}` in $breakpoints";
 }
+
+@mixin max-respond-to($breakpoint) {
+  @if map-has-key($breakpoints, $breakpoint) {
+      $value: map-get($breakpoints, $breakpoint);
+       
+      @media screen and (max-width: $value) {
+          @content;
+      }
+  }
+   
+  @warn "Unknown `#{$breakpoint}` in $breakpoints";
+}
