--- a/rayweb/_sass/components/related-posts.scss
+++ b/rayweb/_sass/components/related-posts.scss
@@ -10,6 +10,10 @@
   padding-bottom: 2em;
   margin-bottom: 2em;
 
+  @include max-respond-to(m){
+    flex-flow: row wrap;
+  }
+
   h2, h3 {
     margin: 0 !important;
   }
@@ -20,6 +24,12 @@
     align-self: center;
     font-family: $body-font-stack;
     opacity: 0.3;
+    padding-right: 2rem;
+
+    @include max-respond-to(m){
+      flex-basis: 100%;
+      margin-bottom: 2rem !important;
+    }
   }
   
   a {
@@ -41,5 +51,14 @@
     margin: vr(2) 0;
     border-left: solid 1px $hr-border-color;
     padding: 2rem;
+
+    @include max-respond-to(m){
+      flex-basis: 100%;
+      margin-bottom: 2rem !important;
+      border-left: 0px;
+      border-top: solid 1px $hr-border-color;
+      padding: 2rem 0 !important;
+      font-size: ms(2);
+    }
   }
 }
