--- a/_includes/figure.html
+++ b/_includes/figure.html
@@ -1,4 +1,4 @@
 <figure>
-  <img src="{{ site.url }}/{{ include.image_asset }}" alt="{{ include.image_caption }}">
+  <img src="{{ site.url }}{{ include.image_asset }}" alt="{{ include.image_caption }}">
   <figcaption>{{ include.image_caption }}</figcaption>
 </figure>
