added animation to home page
Using anime.js, added some simple animation to the introductory text.

--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -40,5 +40,7 @@
         ga('send', 'pageview');
       </script>
     {% endif %}
+    <script src="{{ 'assets/js/anime.min.js' | relative_url }}"></script>
+  <script src="{{ 'assets/js/fadein.js' | relative_url }}"></script>
   </body>
 </html>
