--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,13 +3,19 @@ layout: "main"
 ---
 
 <div class="home">
-  <h1 class="intro-title">Hi, I'm Ray!</h1>
-  <p class="intro-text">I am a designer currently working at <a href="https://www.virtru.com">Virtru</a>. I enjoy crafting thoughtful and engaging experiences that help people achieve more. Here's a few things I've worked on. Let me know what you think! &#x270C;</p>
+  <h1 class="intro-title">
+    <div class="word1">Hi,</div>
+    <div class="word2"> I'm</div>
+    <div class="word3"> Ray!</div>
+  </h1>
+  <div class="fade-after">
+    <p class="intro-text">I am a designer currently working at <a href="https://www.virtru.com">Virtru</a>. I enjoy crafting thoughtful and engaging experiences that help people achieve more. Here's a few things I've worked on. Let me know what you think! &#x270C;</p>
+  </div>
   {{ content }}
 
   {% if site.categories.work.size > 0 %}
-  <h2 class="post-list-heading">{{ page.list_title | default: "Selected Works" }}</h2>
-    <ul class="post-list">
+  <h2 class="post-list-heading fade-later">{{ page.list_title | default: "Selected Works" }}</h2>
+    <ul class="post-list fade-later">
       {% for post in site.categories.work %}
         <li>
           <h3>
@@ -22,8 +28,8 @@ layout: "main"
 {% endif %}   
 
   {% if site.categories.explorations.size > 0 %}
-  <h2 class="post-list-heading">{{ page.list_title | default: "Explorations" }}</h2>
-  <ul class="post-list">
+  <h2 class="post-list-heading fade-later">{{ page.list_title | default: "Explorations" }}</h2>
+  <ul class="post-list fade-later">
       {% for post in site.categories.explorations %}
         <li>
           <h3>
