--- a/_sass/base/typography.scss
+++ b/_sass/base/typography.scss
@@ -77,11 +77,11 @@ $typography-weight: (
 
 
 html, body {
-  -ms-word-break: break-all;
-  word-break: break-all;
+  //-ms-word-break: break-all;
+  //word-break: break-all;
 
   /* Non standard for WebKit */
-  word-break: break-word;
+  //word-break: break-word;
 
   -webkit-hyphens: auto;
   -moz-hyphens: auto;
