--- a/_sass/master.scss
+++ b/_sass/master.scss
@@ -111,11 +111,11 @@ hr {
 figure{
 background-color: #f4f4f4;
 margin: 0;
-padding: 2em 2em 1em 2em;
+padding: 2rem 2rem 1rem 2rem;
 
 margin-bottom: vr(1);
 
   figcaption {
-    padding-top: 1em;
+    padding-top: 1rem;
   }
 }
