--- a/_sass/layout/work.scss
+++ b/_sass/layout/work.scss
@@ -1,11 +1,17 @@
 .project-body{
 
+  /*display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;/**/
+
   h2, h3, h4, h5, h6, p, ul, ol{
-    max-width: 30em;
+    max-width: 36rem;
+    //align-self: center;
     //flex-basis: 30em;
     //display: block;
     @include respond-to(l){
-      margin-left: 7vw;
+      margin: 0 auto 1rem auto;
     }
   }
 }
@@ -32,7 +38,7 @@
 .project-description {
   color: inherit;
   margin-bottom: 2rem;
-  margin-top: 1em;
+  margin-top: 1rem;
   font-weight: normal;
   opacity: 0.85;
 
