--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,7 +9,7 @@ layout: "main"
     <div class="word3"> Ray!</div>
   </h1>
   <div class="fade-after">
-    <p class="intro-text">I am a designer currently working at <a href="https://www.virtru.com">Virtru</a>. I enjoy crafting thoughtful and engaging experiences that help people achieve more. Here's a few things I've worked on. Let me know what you think! &#x270C;</p>
+    <p class="intro-text">I am a product designer currently working at <a href="https://www.zappos.com">Zappos</a>, formerly at <a href="https://www.virtru.com">Virtru</a>. I enjoy crafting thoughtful and engaging experiences that help people achieve more. Here's a few things I've worked on. Let me know what you think! &#x270C;</p>
   </div>
   {{ content }}
 
